# Optichash

./: README.md  docker-compose.yml  format_data.py  requirements.txt
database-init/: README.md  init.sql
frontend/: README.md  about.html  analyzer.html  index.html  recommender.html  resources.html  scanner.js  styles.css
frontend/assets/css/: styles.css
frontend/assets/js/: scanner.js
frontend/legacy/: finder.html  releases.html
gateway-java/: Dockerfile  README.md
gateway-java/src/main/java/com/comicbookapp/gateway/: GatewayController.java
metadata_redirect/: metadata_service.py
ml-python/: Dockerfile  README.md  main.py  model.py  quantize.py  requirements.txt  train.py
nginx/: README.md  nginx.conf
phash-cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
